[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
config = "0.15.11"
num_cpus = "1.17.0"
anyhow = "1.0.98"
serde_json = "1.0.140"
io_utils = "0.3.2"
